2020-02-11 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_line_object.c: Revise geda_line_object_modify to validate
      whichone and eliminate the switch case.

2020-02-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_box_object.c: Fix incorrect assignment in geda_box_
      object_scale; upper_x should have been upper_y.

    * tests/test_line_object.c: Revise check_line_object_mirror to restore
      the coordinates of the line and add checks for:

          * geda_line_object_modify

    * tests/test_math.c: Add checks for:

          * geda_math_degrees_to_radians
          * geda_math_distance

2020-01-04 Wiley E. Hill <wileyhill@gmail.com>

    * data/x-geda-gsch2pcb-project.desktop.in: Use lower case "project".

2019-12-22 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.
    * po/bg.po: Update Bulgarian translations.
    * po/bs.po: Update Bosnian translations.
    * po/fa.po: Update Persian translations.
    * po/fi.po: Update Finnish translations.
    * po/he.po: Update Hebrew translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.

2019-12-17 Wiley E. Hill <wileyhill@gmail.com>

    * include/libgeda/geda_picture.h: Add height and width to retain the as
      loaded dimensions of pictures;

    * src/geda/geda_picture.c: Add getters and setters functions:

          * geda_picture_get_height
          * geda_picture_set_height
          * geda_picture_get_width
          * geda_picture_set_width

    * src/object/o_picture_object.c: Reverse terms in geda_picture_object_new
      so that picture->ratio is not the quotient of two negative factor, and
      set the new height and width members.

2019-12-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/math: Add Doxygen group:

          * src/math/m_angle.c math-angle-proc
          * src/math/m_arc.c   math-arc-proc
          * src/math/m_box.c   math-box-proc
