@@ -125,6 +125,9 @@ struct st_line {
   int y[2];
 };
 
+#define LINE_END1 0
+#define LINE_END2 1
+
 /*------------------------------------------------------------------
  *                         LINE_OPTIONS
  *------------------------------------------------------------------*/
@@ -147,8 +150,6 @@ struct st_point {
 /*------------------------------------------------------------------
  *                            PATH
  *------------------------------------------------------------------*/
-#define LINE_END1 0
-#define LINE_END2 1
 
 typedef enum {
     PATH_MOVETO,
